# scrapinghub-mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml  scrapinghub-mcp.mutations.yaml  skills.lock.json
.beads/: interactions.jsonl
.githooks/: pre-commit
.github/workflows/: ci.yml
openspec/changes/add-scrapinghub-mcp/: design.md  proposal.md  tasks.md
openspec/changes/add-scrapinghub-mcp/specs/auth-config/: spec.md
openspec/changes/add-scrapinghub-mcp/specs/mcp-stdio-server/: spec.md
openspec/changes/add-scrapinghub-mcp/specs/scrapinghub-api-safety/: spec.md
scrapinghub_mcp/: __init__.py
skills/python/: SKILL.md
src/scrapinghub_mcp/: allowlist-schema.json  cli.py  scrapinghub-mcp.allowlist.yaml  scrapinghub-mcp.mutations.yaml  server.py
tests/: test_auth_config.py  test_cli.py  test_docs.py  test_live_integration.py  test_server.py
