[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "scrapinghub-mcp"
version = "0.1.0"
description = "Stdio MCP server for the Scrapinghub API."
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2",
  "jsonschema",
  "python-dotenv",
  "pyyaml",
  "scrapinghub",
  "structlog",
]

[project.scripts]
shub-mcp = "scrapinghub_mcp.cli:main"

[dependency-groups]
lint = [
  "ruff",
  "ty",
]
dev = [
  "pytest",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
line-ending = "lf"

[tool.uv]
package = true

[tool.uv.build-backend]
source-include = [
  "src/scrapinghub_mcp/scrapinghub-mcp.allowlist.yaml",
  "src/scrapinghub_mcp/allowlist-schema.json",
]
